--- a/notebooks/Visualization.ipynb
+++ b/notebooks/Visualization.ipynb
@@ -124,7 +124,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "WARNING: Method definition describe(AbstractArray) in module StatsBase at /home/zach/.julia/v0.5/StatsBase/src/scalarstats.jl:573 overwritten in module DataFrames at /home/zach/.julia/v0.5/DataFrames/src/abstractdataframe/abstractdataframe.jl:407.\n"
+      "WARNING: using POMDPToolbox.create_policy in module HierarchicalDriving conflicts with an existing identifier.\n"
      ]
     }
    ],
@@ -146,14 +146,24 @@
     "deletable": true,
     "editable": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "LoadError",
+     "evalue": "UndefVarError: RoadSegment not defined",
+     "output_type": "error",
+     "traceback": [
+      "UndefVarError: RoadSegment not defined",
+      ""
+     ]
+    }
+   ],
    "source": [
     "HORIZON = 10\n",
     "TIME_STEP = 0.3\n",
     "lb_x = (AVG_HWY_VELOCITY - 5.0) * TIME_STEP * HORIZON\n",
     "ub_x = (AVG_HWY_VELOCITY + 5.0) * TIME_STEP * HORIZON\n",
     "p = LowLevelMDP(0.99,TIME_STEP, HORIZON,\n",
-    "                            RoadSegment((-100.0, 500.0),[0.0, LANE_WIDTH, 2.0 * LANE_WIDTH, 3.0 * LANE_WIDTH, 4.0 * LANE_WIDTH]),\n",
+    "                            HierarchicalDriving.RoadSegment((-100.0, 500.0),[0.0, LANE_WIDTH, 2.0 * LANE_WIDTH, 3.0 * LANE_WIDTH, 4.0 * LANE_WIDTH]),\n",
     "                            CarPhysicalState((0.0, 1.0 * LANE_WIDTH/2.0, AVG_HWY_VELOCITY)),\n",
     "                            (CarPhysicalState((lb_x, 1.0 * LANE_WIDTH/2.0 - 0.5, AVG_HWY_VELOCITY - 5)),\n",
     "                             CarPhysicalState((ub_x, 1.0 * LANE_WIDTH/2.0 + 0.5, AVG_HWY_VELOCITY + 5))),\n",
