Ready for visualization.

--- a/notebooks/Visualization.ipynb
+++ b/notebooks/Visualization.ipynb
@@ -146,17 +146,7 @@
     "deletable": true,
     "editable": true
    },
-   "outputs": [
-    {
-     "ename": "LoadError",
-     "evalue": "UndefVarError: RoadSegment not defined",
-     "output_type": "error",
-     "traceback": [
-      "UndefVarError: RoadSegment not defined",
-      ""
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "HORIZON = 10\n",
     "TIME_STEP = 0.3\n",
@@ -318,7 +308,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -331,7 +321,7 @@
        "testing (generic function with 1 method)"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -356,6 +346,7 @@
     "                               alpha_action=1/10,\n",
     "                               k_state=10.0,\n",
     "                               alpha_state=1/10,\n",
+    "                               estimate_value=RolloutEstimator(subintentional_policy(p))\n",
     "                              )\n",
     "        policy1 = solve(solver, p)\n",
     "        hr1 = HistoryRecorder(max_steps = p.HORIZON, rng = MersenneTwister(i))\n",
@@ -378,7 +369,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -389,28 +380,86 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1,45.67586237418204,38.10188284074641\n",
-      "2,45.67586237418204,34.57340404074641\n",
-      "3,45.67586237418204,36.90223925274641\n",
-      "4,45.67586237418204,38.0323612582348\n",
-      "5,45.67586237418204,29.889174033861412\n"
-     ]
-    },
-    {
-     "ename": "LoadError",
-     "evalue": "InterruptException:",
-     "output_type": "error",
-     "traceback": [
-      "InterruptException:",
-      "",
-      " in generate_s(::HierarchicalDriving.LowLevelMDP, ::HierarchicalDriving.GlobalStateL1, ::Int64, ::MersenneTwister) at /home/zach/.julia/v0.5/HierarchicalDriving/src/LowLevelMDP.jl:504",
-      " in generate_sr at /home/zach/.julia/v0.5/HierarchicalDriving/src/LowLevelMDP.jl:566 [inlined]",
-      " in simulate(::MCTS.DPWPlanner{HierarchicalDriving.LowLevelMDP,HierarchicalDriving.GlobalStateL1,Int64,MCTS.SolvedRolloutEstimator{MersenneTwister},MCTS.RandomActionGenerator{MersenneTwister},MersenneTwister}, ::HierarchicalDriving.GlobalStateL1, ::Int64) at /home/zach/.julia/v0.5/MCTS/src/dpw.jl:86",
-      " in simulate(::MCTS.DPWPlanner{HierarchicalDriving.LowLevelMDP,HierarchicalDriving.GlobalStateL1,Int64,MCTS.SolvedRolloutEstimator{MersenneTwister},MCTS.RandomActionGenerator{MersenneTwister},MersenneTwister}, ::HierarchicalDriving.GlobalStateL1, ::Int64) at /home/zach/.julia/v0.5/MCTS/src/dpw.jl:110",
-      " in action(::MCTS.DPWPlanner{HierarchicalDriving.LowLevelMDP,HierarchicalDriving.GlobalStateL1,Int64,MCTS.SolvedRolloutEstimator{MersenneTwister},MCTS.RandomActionGenerator{MersenneTwister},MersenneTwister}, ::HierarchicalDriving.GlobalStateL1) at /home/zach/.julia/v0.5/MCTS/src/dpw.jl:22",
-      " in simulate(::POMDPToolbox.HistoryRecorder, ::HierarchicalDriving.LowLevelMDP, ::MCTS.DPWPlanner{HierarchicalDriving.LowLevelMDP,HierarchicalDriving.GlobalStateL1,Int64,MCTS.SolvedRolloutEstimator{MersenneTwister},MCTS.RandomActionGenerator{MersenneTwister},MersenneTwister}, ::HierarchicalDriving.GlobalStateL1) at /home/zach/.julia/v0.5/POMDPToolbox/src/simulators/history_recorder.jl:215",
-      " in simulate(::POMDPToolbox.HistoryRecorder, ::HierarchicalDriving.LowLevelMDP, ::MCTS.DPWPlanner{HierarchicalDriving.LowLevelMDP,HierarchicalDriving.GlobalStateL1,Int64,MCTS.SolvedRolloutEstimator{MersenneTwister},MCTS.RandomActionGenerator{MersenneTwister},MersenneTwister}) at /home/zach/.julia/v0.5/POMDPToolbox/src/simulators/history_recorder.jl:191",
-      " in testing() at ./In[7]:23"
+      "1,45.67586237418204,33.44362786146521\n",
+      "2,45.67586237418204,36.89047805274641\n",
+      "3,45.67586237418204,35.73776284074641\n",
+      "4,45.67586237418204,24.69510227571395\n",
+      "5,45.67586237418204,38.0089564702348\n",
+      "6,45.67586237418204,34.5506943983548\n",
+      "7,45.67586237418204,36.89047805274641\n",
+      "8,45.67586237418204,35.73776284074641\n",
+      "9,45.67586237418204,36.90223925274641\n",
+      "10,45.67586237418204,34.16909686021894\n",
+      "11,45.67586237418204,38.06659805274641\n",
+      "12,45.67586237418204,36.86753902002761\n",
+      "13,45.67586237418204,33.00473806021895\n",
+      "14,45.67586237418204,34.57340404074641\n",
+      "15,45.67586237418204,36.89047805274641\n",
+      "16,45.67586237418204,36.90223925274641\n",
+      "17,45.67586237418204,27.14318237155775\n",
+      "18,45.67586237418204,34.58493119286641\n",
+      "19,45.67586237418204,35.726119252746415\n",
+      "20,45.67586237418204,36.46403764565245\n",
+      "21,45.67586237418204,31.90943038285056\n",
+      "22,45.67586237418204,34.16909686021894\n",
+      "23,45.67586237418204,35.726119252746415\n",
+      "24,45.67586237418204,34.157453272218945\n",
+      "25,45.67586237418204,34.57340404074641\n",
+      "26,45.67586237418204,36.8445976702348\n",
+      "27,45.67586237418204,30.614411325213947\n",
+      "28,45.67586237418204,30.614411325213947\n",
+      "29,45.67586237418204,34.157453272218945\n",
+      "30,45.67586237418204,36.90223925274641\n",
+      "31,45.67586237418204,38.06659805274641\n",
+      "32,45.67586237418204,29.20518745437125\n",
+      "33,45.67586237418204,29.508770120683998\n",
+      "34,45.67586237418204,33.91205207221895\n",
+      "35,45.67586237418204,34.192035892937746\n",
+      "36,45.67586237418204,36.91388284074641\n",
+      "37,45.67586237418204,29.484984465333945\n",
+      "38,45.67586237418204,39.138732649516\n",
+      "39,45.67586237418204,38.06659805274641\n",
+      "40,45.67586237418204,36.856241258234796\n",
+      "41,45.67586237418204,29.461696113213947\n",
+      "42,45.67586237418204,38.06659805274641\n",
+      "43,45.67586237418204,36.89047805274641\n",
+      "44,45.67586237418204,36.90223925274641\n",
+      "45,45.67586237418204,34.596343073465206\n",
+      "46,45.67586237418204,34.59657478086641\n",
+      "47,45.67586237418204,31.886489033057746\n",
+      "48,45.67586237418204,36.8445976702348\n",
+      "49,45.67586237418204,32.98225551425125\n",
+      "50,45.67586237418204,34.57340404074641\n",
+      "51,45.67586237418204,33.79322570553245\n",
+      "52,45.67586237418204,34.57340404074641\n",
+      "53,45.67586237418204,29.254028800338947\n",
+      "54,45.67586237418204,34.57340404074641\n",
+      "55,45.67586237418204,35.73776284074641\n",
+      "56,45.67586237418204,32.183077305741406\n",
+      "57,45.67586237418204,35.6918824582348\n",
+      "58,45.67586237418204,36.879529610354794\n",
+      "59,45.67586237418204,29.414146610718948\n",
+      "60,45.67586237418204,35.6918824582348\n",
+      "61,45.67586237418204,35.73776284074641\n",
+      "62,45.67586237418204,34.596343073465206\n",
+      "63,45.67586237418204,30.518832022218948\n",
+      "64,45.67586237418204,28.24978781071895\n",
+      "65,45.67586237418204,34.57340404074641\n",
+      "66,45.67586237418204,36.90223925274641\n",
+      "67,45.67586237418204,35.31132243365245\n",
+      "68,45.67586237418204,36.89047805274641\n",
+      "69,45.67586237418204,35.726119252746415\n",
+      "70,45.67586237418204,33.050847833057745\n",
+      "71,45.67586237418204,35.726119252746415\n",
+      "72,45.67586237418204,29.402503022718946\n",
+      "73,45.67586237418204,38.0089564702348\n",
+      "74,45.67586237418204,35.26474690553245\n",
+      "75,45.67586237418204,34.57340404074641\n",
+      "76,45.67586237418204,34.596343073465206\n",
+      "77,-5.0,38.0089564702348\n",
+      "78,45.67586237418204,36.89047805274641\n",
+      "79,45.67586237418204,35.73776284074641\n",
+      "80,45.67586237418204,34.57340404074641\n"
      ]
     }
    ],
