Final for IAAI. Next step incresing simulation frequency for speed.

--- a/notebooks/FlatMDPViz.ipynb
+++ b/notebooks/FlatMDPViz.ipynb
@@ -136,13 +136,15 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "7"
+       "100"
       ]
      },
      "execution_count": 2,
@@ -151,8 +153,8 @@
     }
    ],
    "source": [
-    "n = 40\n",
-    "i = 7"
+    "n = 160\n",
+    "i = 100"
    ]
   },
   {
@@ -170,13 +172,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false,
     "deletable": true,
     "editable": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [],
+      "text/plain": [
+       "Interact.Options{:SelectionSlider,Int64}(Signal{Int64}(13, nactions=1),\"i\",13,\"13\",Interact.OptionDict(DataStructures.OrderedDict(\"1\"=>1,\"2\"=>2,\"3\"=>3,\"4\"=>4,\"5\"=>5,\"6\"=>6,\"7\"=>7,\"8\"=>8,\"9\"=>9,\"10\"=>10…),Dict(18=>\"18\",2=>\"2\",16=>\"16\",11=>\"11\",21=>\"21\",7=>\"7\",9=>\"9\",25=>\"25\",10=>\"10\",26=>\"26\"…)),Any[],Any[],true,\"horizontal\")"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Collision Occured!!!\n"
+     ]
+    },
+    {
+     "ename": "BoundsError",
+     "evalue": "BoundsError: attempt to access 100-element Array{Records.Entity{AutomotiveDrivingModels.VehicleState,AutomotiveDrivingModels.VehicleDef,Int64},1} at index [101]",
+     "output_type": "error",
+     "traceback": [
+      "BoundsError: attempt to access 100-element Array{Records.Entity{AutomotiveDrivingModels.VehicleState,AutomotiveDrivingModels.VehicleDef,Int64},1} at index [101]",
+      "",
+      " in push!(::Records.Frame{Records.Entity{AutomotiveDrivingModels.VehicleState,AutomotiveDrivingModels.VehicleDef,Int64}}, ::Records.Entity{AutomotiveDrivingModels.VehicleState,AutomotiveDrivingModels.VehicleDef,Int64}) at C:\\Users\\ekhla\\AppData\\Local\\JuliaPro-0.5.0.5\\pkgs-0.5.0.5\\v0.5\\Records\\src\\frames.jl:55",
+      " in convert(::Type{Records.Frame{Records.Entity{AutomotiveDrivingModels.VehicleState,AutomotiveDrivingModels.VehicleDef,Int64}}}, ::HierarchicalDriving.GlobalStateL1) at C:\\Users\\ekhla\\AppData\\Local\\JuliaPro-0.5.0.5\\pkgs-0.5.0.5\\v0.5\\HierarchicalDriving\\src\\Visualization.jl:60",
+      " in show(::IOContext{Base64EncodePipe}, ::MIME{Symbol(\"image/png\")}, ::HierarchicalDriving.HDVis) at C:\\Users\\ekhla\\AppData\\Local\\JuliaPro-0.5.0.5\\pkgs-0.5.0.5\\v0.5\\HierarchicalDriving\\src\\Visualization.jl:31",
+      " in limitstringmime(::MIME{Symbol(\"image/png\")}, ::Tuple{HierarchicalDriving.SimulationMDP,HierarchicalDriving.GlobalStateL1,Array{AutoViz.SceneOverlay,1}}) at C:\\Users\\ekhla\\AppData\\Local\\JuliaPro-0.5.0.5\\pkgs-0.5.0.5\\v0.5\\IJulia\\src\\inline.jl:32",
+      " in display_dict(::Tuple{HierarchicalDriving.SimulationMDP,HierarchicalDriving.GlobalStateL1,Array{AutoViz.SceneOverlay,1}}) at C:\\Users\\ekhla\\AppData\\Local\\JuliaPro-0.5.0.5\\pkgs-0.5.0.5\\v0.5\\IJulia\\src\\execute_request.jl:33",
+      " in display_dict(::Reactive.Signal{Any}) at C:\\Users\\ekhla\\AppData\\Local\\JuliaPro-0.5.0.5\\pkgs-0.5.0.5\\v0.5\\Interact\\src\\IJulia\\setup.jl:97",
+      " in execute_request(::ZMQ.Socket, ::IJulia.Msg) at C:\\Users\\ekhla\\AppData\\Local\\JuliaPro-0.5.0.5\\pkgs-0.5.0.5\\v0.5\\IJulia\\src\\execute_request.jl:188",
+      " in eventloop(::ZMQ.Socket) at C:\\Users\\ekhla\\AppData\\Local\\JuliaPro-0.5.0.5\\pkgs-0.5.0.5\\v0.5\\IJulia\\src\\eventloop.jl:8",
+      " in (::IJulia.##13#19)() at .\\task.jl:360"
+     ]
+    }
+   ],
    "source": [
     "policyFileName = \"../scratch/SingleAgentGridPolicy.jld\"\n",
     "hf1 = HierarchicalFramework1(p, policyFileName)\n",
@@ -193,7 +231,9 @@
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
@@ -264,7 +304,9 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": []
@@ -284,10 +326,10 @@
   },
   "widgets": {
    "state": {
-    "1697e25a-9971-4660-9b04-c39228ce7ff8": {
+    "b6c0b84c-cbcd-4bdd-8415-b0369b65cedf": {
      "views": [
       {
-       "cell_index": 4
+       "cell_index": 3
       }
      ]
     }
