--- a/notebooks/Visualization.ipynb
+++ b/notebooks/Visualization.ipynb
@@ -134,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -142,7 +142,7 @@
    },
    "outputs": [],
    "source": [
-    "HORIZON = 15\n",
+    "HORIZON = 10\n",
     "TIME_STEP = 0.3\n",
     "lb_x = 0 #(AVG_HWY_VELOCITY - 5.0) * TIME_STEP * HORIZON\n",
     "ub_x = 150 #(AVG_HWY_VELOCITY + 5.0) * TIME_STEP * HORIZON\n",
@@ -156,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -164,14 +164,28 @@
    },
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING: Method definition testing()"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
        "testing (generic function with 1 method)"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " in module Main at In[6]:2 overwritten at In[9]:2.\n"
+     ]
     }
    ],
    "source": [
@@ -220,7 +234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -231,109 +245,109 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1,0.0,-11.24864761525786\n",
-      "2,42.78841803155116,44.33193476070858\n",
-      "3,44.72760733275767,44.61743161624297\n",
-      "4,0.0,38.71008061912444\n",
-      "5,0.0,42.92191857636856\n",
-      "6,43.16849952552796,44.62283132261159\n",
-      "7,0.0,33.133942981551165\n",
-      "8,0.0,-6.946871172798969\n",
-      "9,0.0,-0.1781999999999999\n",
-      "10,0.0,-8.235097688448906\n",
-      "11,0.0,0.0\n",
-      "12,42.78841803155116,43.656338618151\n",
-      "13,-1.6455922106316307,43.99363748252513\n",
-      "14,0.0,0.0\n",
-      "15,0.0,0.0\n",
-      "16,0.0,44.33193476070858\n",
-      "17,0.0,39.04418011177014\n",
-      "18,0.0,0.0\n",
-      "19,0.0,39.27712372585955\n",
-      "20,0.0,38.86135480085945\n",
-      "21,0.0,38.20113882945912\n",
-      "22,43.16849952552796,44.33193476070858\n",
-      "23,0.0,31.855253672647184\n",
-      "24,0.0,36.574622065708475\n",
-      "25,0.0,33.01079457306916\n",
-      "26,0.0,-0.1781999999999999\n",
-      "27,0.0,0.0\n",
-      "28,0.0,41.006433829578896\n",
-      "29,0.0,-0.1781999999999999\n",
-      "30,0.0,0.0\n",
-      "31,0.0,30.48870578757156\n",
-      "32,0.0,33.99021891437996\n",
-      "33,-4.499699232913609,38.60154386272744\n",
-      "34,44.72760733275767,44.226626919639465\n",
-      "35,44.72760733275767,44.099471836208046\n",
+      "1,0.0,0.0\n",
+      "2,-1.4417803659219204,44.24325908291367\n",
+      "3,0.0,-1.1627255931506546\n",
+      "4,44.99354965496276,44.93818497329708\n",
+      "5,0.0,-5.929367445013061\n",
+      "6,44.99354965496276,44.99354965496276\n",
+      "7,44.99354965496276,44.93873862011374\n",
+      "8,44.99354965496276,44.99354965496276\n",
+      "9,0.0,0.0\n",
+      "10,0.0,-11.48239397820663\n",
+      "11,0.0,-0.3426331045470551\n",
+      "12,-1.4417803659219204,44.24325908291367\n",
+      "13,0.0,0.0\n",
+      "14,0.0,39.46967708291367\n",
+      "15,44.99354965496276,44.99354965496276\n",
+      "16,0.0,0.0\n",
+      "17,0.0,39.59787708291367\n",
+      "18,44.99354965496276,44.93818497329708\n",
+      "19,44.99354965496276,44.93818497329708\n",
+      "20,44.99354965496276,44.93762573408834\n",
+      "21,0.0,44.59787708291367\n",
+      "22,-1.7303989782066285,44.99354965496276\n",
+      "23,44.99354965496276,44.93762573408834\n",
+      "24,0.0,43.47080144691974\n",
+      "25,44.99354965496276,44.99354965496276\n",
+      "26,0.0,43.29438344691973\n",
+      "27,0.0,44.93873862011374\n",
+      "28,44.99354965496276,44.93762573408834\n",
+      "29,0.0,-10.796254798637655\n",
+      "30,0.0,39.25616123658505\n",
+      "31,0.0,34.25616123658505\n",
+      "32,0.0,-2.0744844689886284\n",
+      "33,-4.090549949524554,39.543066048064645\n",
+      "34,0.0,43.64370872871973\n",
+      "35,-2.1983554796830367,-5.0\n",
       "36,0.0,0.0\n",
-      "37,0.0,0.0\n",
-      "38,0.0,44.33193476070858\n",
-      "39,0.0,0.0\n",
-      "40,0.0,0.0\n",
-      "41,43.16849952552796,43.76201891437996\n",
-      "42,0.0,-9.213332419722166\n",
-      "43,44.72760733275767,43.76201891437996\n",
-      "44,0.0,32.80208230424799\n",
-      "45,0.0,0.0\n",
-      "46,0.0,32.237468002569166\n",
-      "47,42.03961948026746,44.27712372585955\n",
-      "48,0.0,38.312559340748074\n",
-      "49,44.72760733275767,44.27981001194244\n",
+      "37,44.99354965496276,44.88337393844806\n",
+      "38,0.0,0.0\n",
+      "39,44.99354965496276,44.93762573408834\n",
+      "40,-1.4417803659219204,44.99354965496276\n",
+      "41,44.99354965496276,44.93762573408834\n",
+      "42,0.0,39.487701366398966\n",
+      "43,0.0,0.0\n",
+      "44,0.0,0.0\n",
+      "45,0.0,-11.096255415921918\n",
+      "46,0.0,0.0\n",
+      "47,0.0,-0.17641799999999988\n",
+      "48,0.0,-13.236955899763569\n",
+      "49,0.0,-0.4999935764362606\n",
       "50,0.0,0.0\n",
-      "51,0.0,0.0\n",
-      "52,0.0,0.0\n",
-      "53,0.0,38.60584181193091\n",
-      "54,0.0,31.576015688662213\n",
-      "55,42.41213735251413,43.47652695503041\n",
-      "56,0.0,0.0\n",
-      "57,0.0,33.49604866987917\n",
-      "58,0.0,0.0\n",
-      "59,0.0,39.1691405061035\n",
-      "60,0.0,42.8844544815063\n",
+      "51,0.0,-11.096255415921918\n",
+      "52,0.0,38.86836254871973\n",
+      "53,0.0,39.543066048064645\n",
+      "54,-2.9040452996830357,39.41431240124799\n",
+      "55,44.99354965496276,44.99354965496276\n",
+      "56,0.0,44.99354965496276\n",
+      "57,44.99354965496276,44.93818497329708\n",
+      "58,44.99354965496276,44.93818497329708\n",
+      "59,0.0,0.0\n",
+      "60,0.0,0.0\n",
       "61,0.0,0.0\n",
-      "62,43.16849952552796,44.67168341188325\n",
+      "62,-1.7303989782066285,44.99354965496276\n",
       "63,0.0,0.0\n",
-      "64,0.0,43.27085222063417\n",
-      "65,0.0,42.61723982256916\n",
-      "66,0.0,33.83010003846182\n",
-      "67,0.0,41.25411042056805\n",
-      "68,0.0,44.61853337340812\n",
-      "69,0.0,33.82902020626427\n",
-      "70,0.0,-0.33894997160525797\n",
-      "71,0.0,43.83491107331085\n",
-      "72,0.0,0.0\n",
+      "64,0.0,0.0\n",
+      "65,0.0,34.25616123658505\n",
+      "66,0.0,-4.732019341965259\n",
+      "67,0.0,-0.3338995314392351\n",
+      "68,0.0,44.59787708291367\n",
+      "69,0.0,-1.6129585749039204\n",
+      "70,0.0,0.0\n",
+      "71,0.0,33.96786254871974\n",
+      "72,44.99354965496276,44.93873862011374\n",
       "73,0.0,0.0\n",
       "74,0.0,0.0\n",
-      "75,0.0,0.0\n",
-      "76,43.94021891437996,44.16965589316243\n",
-      "77,0.0,43.77958443324397\n",
-      "78,43.55242022651464,44.564248523939995\n",
-      "79,0.0,-1.3711187821329274\n",
-      "80,0.0,39.150014465453054\n",
-      "81,0.0,31.16374661834098\n",
-      "82,0.0,0.0\n",
-      "83,43.94021891437996,43.70775598987943\n",
-      "84,0.0,41.70238129075202\n",
-      "85,0.0,-1.533907555634512\n",
-      "86,44.72760733275767,43.763800914379964\n",
-      "87,0.0,33.616852064032095\n",
-      "88,0.0,-10.002862867823648\n",
-      "89,0.0,33.41650452552796\n",
-      "90,0.0,0.0\n",
-      "91,0.0,0.0\n",
-      "92,0.0,31.321636341435152\n",
-      "93,44.72760733275767,44.33193476070858\n",
-      "94,0.0,44.61853337340812\n",
-      "95,0.0,32.16490060035218\n",
-      "96,0.0,43.19956640651464\n",
-      "97,0.0,43.37600222651464\n",
-      "98,-2.338949616456804,39.27767183620805\n",
-      "99,43.94021891437996,43.780100038461825\n",
-      "100,0.0,33.88383124111329\n",
-      "Mean: 8.22684678236952,25.00352282553232\n",
-      "Success Rate: 0.2,0.65\n",
-      "695.852666 seconds (9.10 G allocations: 262.353 GB, 10.52% gc time)\n"
+      "75,-1.1660642512268575,-5.440943548200203\n",
+      "76,44.206161236585054,44.59787708291367\n",
+      "77,0.0,44.54251240124799\n",
+      "78,43.81836254871973,44.54251240124799\n",
+      "79,0.0,0.0\n",
+      "80,-0.9932591662584747,44.24325908291367\n",
+      "81,0.0,0.0\n",
+      "82,-1.7303989782066285,44.88337393844806\n",
+      "83,44.99354965496276,44.99354965496276\n",
+      "84,0.0,-9.181309709557803\n",
+      "85,0.0,43.81836254871973\n",
+      "86,0.0,0.0\n",
+      "87,44.59787708291367,44.99354965496276\n",
+      "88,0.0,0.0\n",
+      "89,0.0,44.543066048064645\n",
+      "90,0.0,39.487701366398966\n",
+      "91,0.0,-2.077960080006628\n",
+      "92,0.0,0.0\n",
+      "93,0.0,0.0\n",
+      "94,0.0,0.0\n",
+      "95,0.0,0.0\n",
+      "96,0.0,0.0\n",
+      "97,0.0,0.0\n",
+      "98,44.99354965496276,44.93818497329708\n",
+      "99,0.0,44.029743236585055\n",
+      "100,44.99354965496276,44.88226105242266\n",
+      "Mean: 10.566181314436749,22.37995289980919\n",
+      "Success Rate: 0.27,0.57\n",
+      "301.303643 seconds (3.96 G allocations: 114.524 GB, 12.17% gc time)\n"
      ]
     }
    ],
@@ -562,25 +576,6 @@
    "mimetype": "application/julia",
    "name": "julia",
    "version": "0.5.0"
-  },
-  "widgets": {
-   "state": {
-    "0a4bdf02-ede7-42a6-bf09-f4f9a0bfed9b": {
-     "views": [
-      {
-       "cell_index": 5
-      }
-     ]
-    },
-    "fc782fbc-24b8-430f-a0e8-8d8593d27ff8": {
-     "views": [
-      {
-       "cell_index": 4
-      }
-     ]
-    }
-   },
-   "version": "1.2.0"
   }
  },
  "nbformat": 4,
